force-app/main/default/objects/Personnel_Schedule__c/Personnel_Schedule__c.object-meta.xml
<CustomObject>
    <label>Personnel Schedule</label>
    <nameField>
        <displayFormat>PER-{0}</displayFormat>
        <label>Personnel Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personnel Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>