force-app/main/default/objects/Personnel_Schedule__c/fields/Actual_Salary_Per_Pay_Period__c.field-meta.xml
<CustomField>
    <fullName>Actual_Salary_Per_Pay_Period__c</fullName>
    <inlineHelpText>In dollars and cents</inlineHelpText>
    <label>Actual Salary Per Pay Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>