force-app/main/default/objects/Personnel_Schedule__c/fields/Annual_Total_for_CDBG_Activity__c.field-meta.xml
<CustomField>
    <fullName>Annual_Total_for_CDBG_Activity__c</fullName>
    <formula>Total_Annual_Salary__c * (
    (
        BLANKVALUE(Percent_Charged_to_CDBG_Activity__c, 0) + 
        BLANKVALUE(Percent_of_Time_Charged_to_Block_Grant__c, 0)
    ) 
  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Annual Salary x Percent Charged to CDBG Activity</inlineHelpText>
    <label>Annual Total for CDBG Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>