force-app/main/default/objects/Personnel_Schedule__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Personnel Schedules</relationshipLabel>
    <relationshipName>Personnel_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>