force-app/main/default/objects/Personnel_Schedule__c/fields/Block_Grant_Share_Rounded_to_whole__c.field-meta.xml
<CustomField>
    <fullName>Block_Grant_Share_Rounded_to_whole__c</fullName>
    <formula>Actual_Salary_Per_Pay_Period__c  *  Percent_of_Time_Charged_to_Block_Grant__c  *  Number_of_Pay_Periods__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual Salary Per Pay Period*Percent of Time Charged to Block Grant*Number of Pay Periods</inlineHelpText>
    <label>Block Grant Share(Rounded to whole $)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>