force-app/main/default/objects/Personnel_Schedule__c/fields/C_D_E_Block_Grant_Share_Rounded_to__c.field-meta.xml
<CustomField>
    <fullName>C_D_E_Block_Grant_Share_Rounded_to__c</fullName>
    <inlineHelpText>Rounded to whole dollars</inlineHelpText>
    <label>(C*D*E) Block Grant Share(Rounded to $)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>