force-app/main/default/objects/Personnel_Schedule__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <inlineHelpText>formatted as (Last Name, First Initial)</inlineHelpText>
    <label>Employee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>