force-app/main/default/objects/Personnel_Schedule__c/fields/Number_of_Pay_Periods__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pay_Periods__c</fullName>
    <label>Number of Pay Periods</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>