force-app/main/default/objects/Personnel_Schedule__c/fields/Percent_Charged_to_CDBG_Activity__c.field-meta.xml
<CustomField>
    <fullName>Percent_Charged_to_CDBG_Activity__c</fullName>
    <label>Percent Charged to CDBG Activity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>