force-app/main/default/objects/Personnel_Schedule__c/fields/Percent_of_Time_Charged_to_Block_Grant__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Time_Charged_to_Block_Grant__c</fullName>
    <label>Percent of Time Charged to Block Grant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>