force-app/main/default/objects/Personnel_Schedule__c/fields/Total_Annual_Salary__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Salary__c</fullName>
    <formula>(Hourly_Rate__c *  Total_Number_of_Annual_Activity_Hours__c ) +(
 Actual_Salary_Per_Pay_Period__c  *  Number_of_Pay_Periods__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hourly Rate x Total Number of Annual Activity Hours</inlineHelpText>
    <label>Total Annual Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>