force-app/main/default/objects/Personnel_Schedule__c/fields/Total_Number_of_Annual_Activity_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Annual_Activity_Hours__c</fullName>
    <label>Total Number of Annual Activity Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>