force-app/main/default/objects/Personnel_Schedule__c/recordTypes/Part_Time.recordType-meta.xml
<RecordType>
    <fullName>Part_Time</fullName>
    <active>true</active>
    <label>Part-Time</label>
</RecordType>